[metadata]
name = async-paho-mqtt-client
version = 0.2.0
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
author = Martin Ortbauer
author_email = martin@villagefarmer.net
url = https://github.com/mortbauer/async-paho-mqtt-client

[options]
python_requires = >=3.5
py_modules = async_paho_mqtt_client
install_requires = 
    paho-mqtt
